Ajustes finais para entrega